Update: Decision Tree Note

--- a/ClassicalMeachineLearn/Notes/支持向量机.md
+++ b/ClassicalMeachineLearn/Notes/支持向量机.md
@@ -18,7 +18,7 @@ test = [[2, 4]] #test set
 clf.predict(test) #分类
 ~~~
 
-## 支持向量机多元分类
+## 支持向量机多元分类: SVC()
 ~~~py
 X = [[0], [1], [2], [3]]
 Y = [0, 1, 2, 3]
@@ -57,5 +57,4 @@ SVR(C=1.0, cache_size=200, coef0=0.0, degree=3, epsilon=0.1, gamma='auto_depreca
  kernel='rbf', max_iter=-1, shrinking=True, tol=0.001, verbose=False)
 clf.predict([[1, 1]])
 #->array([ 1.5])
-
 ~~~
