--- a/ClassicalMeachineLearn/Notes/支持向量机.md
+++ b/ClassicalMeachineLearn/Notes/支持向量机.md
@@ -27,10 +27,14 @@ clf = svm.SVC(gamma='scale', decision_function_shape='ovo')
 clf.fit(X, Y)
 
 #decision_function_shape='ovo'
-SVC(C=1.0, cache_size=200, class_weight=None, coef0=0.0,
- decision_function_shape='ovo', degree=3, gamma='scale', kernel='rbf',
- max_iter=-1, probability=False, random_state=None, shrinking=True,
- tol=0.001, verbose=False)
+SVC(C=1.0, 
+cache_size=200, class_weight=None, 
+coef0=0.0,
+decision_function_shape='ovo', degree=3, 
+gamma='scale', kernel='rbf',
+max_iter=-1, probability=False, 
+random_state=None, shrinking=True,
+tol=0.001, verbose=False)
 
 dec = clf.decision_function([[1]])
 dec.shape[1] # 4 classes: 4*3/2 = 6
@@ -53,8 +57,13 @@ y = [0.5, 2.5]
 clf = svm.SVR()
 clf.fit(X, y)
 
-SVR(C=1.0, cache_size=200, coef0=0.0, degree=3, epsilon=0.1, gamma='auto_deprecated',
- kernel='rbf', max_iter=-1, shrinking=True, tol=0.001, verbose=False)
+SVR(C=1.0, 
+cache_size=200, coef0=0.0, 
+degree=3, epsilon=0.1, 
+gamma='auto_deprecated',
+kernel='rbf', max_iter=-1, 
+shrinking=True, tol=0.001, verbose=False)
+
 clf.predict([[1, 1]])
 #->array([ 1.5])
 ~~~
