Update: Naive Bayes notes

--- a/ClassicalMeachineLearn/Notes/朴素贝叶斯.md
+++ b/ClassicalMeachineLearn/Notes/朴素贝叶斯.md
@@ -32,7 +32,7 @@
 由于每个特征都是独立的，进一步拆分公式 ：
 ![朴素贝叶斯推断公式2](./imgs/朴素贝叶斯推断公式2.png)
 
-## 朴素贝叶斯编程实现
+## 二，朴素贝叶斯编程实现
 ~~~py
 """
 函数说明:朴素贝叶斯分类器训练函数
@@ -80,3 +80,5 @@ def classifyNB(vec2Classify, p0Vec, p1Vec, pClass1):
     else: 
         return 0
 ~~~
+
+## 三，朴素贝叶斯sklearn实现
