--- a/ClassicalMeachineLearn/Notes/朴素贝叶斯.md
+++ b/ClassicalMeachineLearn/Notes/朴素贝叶斯.md
@@ -82,3 +82,106 @@ def classifyNB(vec2Classify, p0Vec, p1Vec, pClass1):
 ~~~
 
 ## 三，朴素贝叶斯sklearn实现
+### （一）高斯朴素贝叶斯（Gaussian Naive Bayes）
+#### 1，示例
+~~~py
+import numpy as np
+X = np.array([[-1, -1], [-2, -1], [-3, -2], [1, 1], [2, 1], [3, 2]])
+Y = np.array([1, 1, 1, 2, 2, 2])
+from sklearn.naive_bayes import GaussianNB
+clf = GaussianNB()
+clf.fit(X, Y)
+print(clf.predict([[-0.8, -1]]))   #[1]
+clf_pf = GaussianNB()
+clf_pf.partial_fit(X, Y, np.unique(Y))
+print(clf_pf.predict([[-0.8, -1]]))  #[1]
+~~~
+
+#### 2，常用方法
+|Methods  | Descriptions|
+|:-------:|:-----------:|
+|fit(X, y[, sample_weight]) | Fit Gaussian Naive Bayes according to X, y|
+|get_params([deep]) |Get parameters for this estimator.|
+|partial_fit(X, y[, classes, sample_weight]) |Incremental fit on a batch of samples.|
+|predict(X) | Perform classification on an array of test vectors X.|
+|predict_log_proba(X) |Return log-probability estimates for the test vector X.|
+|predict_proba(X) |Return probability estimates for the test vector X.|
+|score(X, y[, sample_weight]) |Return the mean accuracy on the given test data and labels.|
+|set_params(**params) |Set the parameters of this estimator.|
+
+### （二）多项分布朴素贝叶斯（Multinomial Naive Bayes）
+#### 1，示例
+~~~py
+import numpy as np
+rng = np.random.RandomState(1)
+X = rng.randint(5, size=(6, 100))
+y = np.array([1, 2, 3, 4, 5, 6])
+from sklearn.naive_bayes import MultinomialNB
+clf = MultinomialNB()
+clf.fit(X, y)
+print(clf.predict(X[2:3]))  #[3]
+~~~
+
+#### 2，方法
+|Methods  | Descriptions|
+|:-------:|:-----------:|
+|fit(X, y[, sample_weight]) | Fit Naive Bayes classifier according to X, y|
+|get_params([deep]) |Get parameters for this estimator.|
+|partial_fit(X, y[, classes, sample_weight]) |Incremental fit on a batch of samples.|
+|predict(X) | Perform classification on an array of test vectors X.|
+|predict_log_proba(X) |Return log-probability estimates for the test vector X.|
+|predict_proba(X) |Return probability estimates for the test vector X.|
+|score(X, y[, sample_weight]) |Return the mean accuracy on the given test data and labels.|
+|set_params(**params) |Set the parameters of this estimator.|
+
+### （三）补充朴素贝叶斯
+#### 1，示例
+~~~py
+import numpy as np
+>>> rng = np.random.RandomState(1)
+>>> X = rng.randint(5, size=(6, 100))
+>>> y = np.array([1, 2, 3, 4, 5, 6])
+>>> from sklearn.naive_bayes import ComplementNB
+>>> clf = ComplementNB()
+>>> clf.fit(X, y)
+ComplementNB()
+>>> print(clf.predict(X[2:3])) #[3]
+~~~
+#### 2，方法
+|Methods  | Descriptions|
+|:-------:|:-----------:|
+|fit(X, y[, sample_weight]) | Fit Naive Bayes classifier according to X, y|
+|get_params([deep]) |Get parameters for this estimator.|
+|partial_fit(X, y[, classes, sample_weight]) |Incremental fit on a batch of samples.|
+|predict(X) | Perform classification on an array of test vectors X.|
+|predict_log_proba(X) |Return log-probability estimates for the test vector X.|
+|predict_proba(X) |Return probability estimates for the test vector X.|
+|score(X, y[, sample_weight]) |Return the mean accuracy on the given test data and labels.|
+|set_params(**params) |Set the parameters of this estimator.|
+
+### （四）伯努利朴素贝叶斯
+#### 1，示例
+~~~py
+>>>
+>>> import numpy as np
+>>> rng = np.random.RandomState(1)
+>>> X = rng.randint(5, size=(6, 100))
+>>> Y = np.array([1, 2, 3, 4, 4, 5])
+>>> from sklearn.naive_bayes import BernoulliNB
+>>> clf = BernoulliNB()
+>>> clf.fit(X, Y)
+BernoulliNB()
+>>> print(clf.predict(X[2:3]))
+[3]
+~~~
+#### 2，方法
+|Methods  | Descriptions|
+|:-------:|:-----------:|
+|fit(X, y[, sample_weight]) | Fit Naive Bayes classifier according to X, y|
+|get_params([deep]) |Get parameters for this estimator.|
+|partial_fit(X, y[, classes, sample_weight]) |Incremental fit on a batch of samples.|
+|predict(X) | Perform classification on an array of test vectors X.|
+|predict_log_proba(X) |Return log-probability estimates for the test vector X.|
+|predict_proba(X) |Return probability estimates for the test vector X.|
+|score(X, y[, sample_weight]) |Return the mean accuracy on the given test data and labels.|
+|set_params(**params) |Set the parameters of this estimator.|
