Update: Naive Bayes notes

--- a/ClassicalMeachineLearn/Notes/朴素贝叶斯.md
+++ b/ClassicalMeachineLearn/Notes/朴素贝叶斯.md
@@ -85,16 +85,20 @@ def classifyNB(vec2Classify, p0Vec, p1Vec, pClass1):
 ### （一）高斯朴素贝叶斯（Gaussian Naive Bayes）
 #### 1，示例
 ~~~py
-import numpy as np
-X = np.array([[-1, -1], [-2, -1], [-3, -2], [1, 1], [2, 1], [3, 2]])
-Y = np.array([1, 1, 1, 2, 2, 2])
-from sklearn.naive_bayes import GaussianNB
-clf = GaussianNB()
-clf.fit(X, Y)
-print(clf.predict([[-0.8, -1]]))   #[1]
-clf_pf = GaussianNB()
-clf_pf.partial_fit(X, Y, np.unique(Y))
-print(clf_pf.predict([[-0.8, -1]]))  #[1]
+>>> import numpy as np
+>>> X = np.array([[-1, -1], [-2, -1], [-3, -2], [1, 1], [2, 1], [3, 2]])
+>>> Y = np.array([1, 1, 1, 2, 2, 2])
+>>> from sklearn.naive_bayes import GaussianNB
+>>> clf = GaussianNB()
+>>> clf.fit(X, Y)
+GaussianNB()
+>>> print(clf.predict([[-0.8, -1]]))
+[1]
+>>> clf_pf = GaussianNB()
+>>> clf_pf.partial_fit(X, Y, np.unique(Y))
+GaussianNB()
+>>> print(clf_pf.predict([[-0.8, -1]]))
+[1]
 ~~~
 
 #### 2，常用方法
@@ -112,14 +116,16 @@ print(clf_pf.predict([[-0.8, -1]]))  #[1]
 ### （二）多项分布朴素贝叶斯（Multinomial Naive Bayes）
 #### 1，示例
 ~~~py
-import numpy as np
-rng = np.random.RandomState(1)
-X = rng.randint(5, size=(6, 100))
-y = np.array([1, 2, 3, 4, 5, 6])
-from sklearn.naive_bayes import MultinomialNB
-clf = MultinomialNB()
-clf.fit(X, y)
-print(clf.predict(X[2:3]))  #[3]
+>>> import numpy as np
+>>> rng = np.random.RandomState(1)
+>>> X = rng.randint(5, size=(6, 100))
+>>> y = np.array([1, 2, 3, 4, 5, 6])
+>>> from sklearn.naive_bayes import MultinomialNB
+>>> clf = MultinomialNB()
+>>> clf.fit(X, y)
+MultinomialNB()
+>>> print(clf.predict(X[2:3]))
+[3]
 ~~~
 
 #### 2，方法
@@ -134,7 +140,7 @@ print(clf.predict(X[2:3]))  #[3]
 |score(X, y[, sample_weight]) |Return the mean accuracy on the given test data and labels.|
 |set_params(**params) |Set the parameters of this estimator.|
 
-### （三）补充朴素贝叶斯
+### （三）补充朴素贝叶斯（Complement Naive Bayes）
 #### 1，示例
 ~~~py
 import numpy as np
@@ -159,10 +165,9 @@ ComplementNB()
 |score(X, y[, sample_weight]) |Return the mean accuracy on the given test data and labels.|
 |set_params(**params) |Set the parameters of this estimator.|
 
-### （四）伯努利朴素贝叶斯
+### （四）伯努利朴素贝叶斯（Bernoulli Naive Bayes）
 #### 1，示例
 ~~~py
->>>
 >>> import numpy as np
 >>> rng = np.random.RandomState(1)
 >>> X = rng.randint(5, size=(6, 100))
