Update: Cluster Notes

--- a/ClassicalMeachineLearn/数据挖掘/Notes/数据挖掘概要.md
+++ b/ClassicalMeachineLearn/数据挖掘/Notes/数据挖掘概要.md
@@ -4,7 +4,7 @@
 
 数据挖掘是通过对大量数据的清理及处理以发现信息，并将这原理应用于分类，推荐系统，预测等方面的过程。本文基于《面向程序员数据挖掘指南》的理解，扩展学习后的总结。不足之处还请赐教，觉得有帮助请**点赞**mark下。谢谢！
 
-[本文Github源码，欢迎 star &amp; fork](https://github.com/liaoyongyu/datamining)
+[本文Github源码，欢迎 star](https://github.com/liaoyongyu/datamining)
 
 ## 一、数据挖掘过程
 
@@ -279,7 +279,7 @@ Slope One算法的缺点：稀疏性，需要基于用户的评分数据；
         #print(sorted(rel_class, key=lambda x:x[1], reverse=True))
         rel_class = sorted(rel_class, key=lambda x:x[1], reverse=True)[0][0]
         return rel_class
-      
+    
 ...
 ```
 
@@ -315,7 +315,7 @@ def train_data(self):
                     count = self.prob[category][word]
                 #优化条件概率公式
                 self.prob[category][word] = (count + 1) / (self.total[category] + len(self.vocabulary)) 
-              
+            
 ...
 
 ```
@@ -378,9 +378,9 @@ image
 ...
 # cost函数，计算梯度
 def propagate(w, b, X, Y):
-    m = X.shape[1]    
-    A = sigmoid(np.dot(w.T, X) + b)          
-    cost = -1 / m * np.sum(Y * np.log(A) + (1 - Y) * np.log(1 - A))      
+    m = X.shape[1]  
+    A = sigmoid(np.dot(w.T, X) + b)        
+    cost = -1 / m * np.sum(Y * np.log(A) + (1 - Y) * np.log(1 - A))    
     dw = 1 / m * np.dot(X, (A - Y).T)  
     db = 1 / m * np.sum(A - Y) 
 ...  
@@ -450,7 +450,7 @@ image
         #random.seed(1)
         #center = [[self.data[i][r] for i in range(1, len((self.data)))]  
                   #for r in random.sample(range(len(self.data)), k)]
-          
+        
         # Kmean ++ 初始化基于距离份量随机选k个中心点
         # 1.随机选择一个点
         center = []
