Update: PCA Notes

--- a/ClassicalMeachineLearn/数据挖掘/Notes/聚类/膜拜用户聚类.md
+++ b/ClassicalMeachineLearn/数据挖掘/Notes/聚类/膜拜用户聚类.md
@@ -36,9 +36,13 @@
 
 ![](https://pic2.zhimg.com/80/v2-8b9136af9295b0c7332df2a022bd8ed1_1440w.jpg)2.
 
-![](https://pic1.zhimg.com/80/v2-3bdfda2821b17f53d53af8e0a25206d8_1440w.jpg)空值占比很小，可以删除，得到没有空值的数据
+![](https://pic1.zhimg.com/80/v2-3bdfda2821b17f53d53af8e0a25206d8_1440w.jpg)
 
-![](https://pic1.zhimg.com/80/v2-0fe4ecef0ccccd53f9f8efdca36599e4_1440w.jpg)先用describe对数据进行一个描述统计，因为describe()只能针对数据型变量进行统计，所以这边只会显示birthyear，需要改变其他变量的数据类型。
+空值占比很小，可以删除，得到没有空值的数据
+
+![](https://pic1.zhimg.com/80/v2-0fe4ecef0ccccd53f9f8efdca36599e4_1440w.jpg)
+
+先用describe对数据进行一个描述统计，因为describe()只能针对数据型变量进行统计，所以这边只会显示birthyear，需要改变其他变量的数据类型。
 
 ![](https://pic4.zhimg.com/80/v2-2f049d055a143151c023caad87bc9593_1440w.png)tripduration中1,090，这种类型没法直接转变成数据型变量，我们可以先用[replace函数](https://www.zhihu.com/search?q=replace%E5%87%BD%E6%95%B0&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22article%22%2C%22sourceId%22%3A106561665%7D)把“，”去掉然后再转。
 
