Update: Cluster Notes

--- a/ClassicalMeachineLearn/数据挖掘/Notes/主成分分析实例/主成分应用.md
+++ b/ClassicalMeachineLearn/数据挖掘/Notes/主成分分析实例/主成分应用.md
@@ -146,7 +146,9 @@ sns.heatmap(data.corr(), annot=True)
 # annot=True: 显示相关系数矩阵的具体数值
 ```
 
-![](https://pic2.zhimg.com/80/v2-900b9f2c30fee3832b890f9b020ea7b5_1440w.jpg)发现变量间相关性都比较高，大于0.7，有做 `PCA`的必要
+![](https://pic2.zhimg.com/80/v2-900b9f2c30fee3832b890f9b020ea7b5_1440w.jpg)
+
+发现变量间相关性都比较高，大于0.7，有做 `PCA`的必要
 
 ### **数据标准化**
 
