Update: Cluster Notes

--- a/ClassicalMeachineLearn/数据挖掘/Notes/主成分分析实例/主成分应用.md
+++ b/ClassicalMeachineLearn/数据挖掘/Notes/主成分分析实例/主成分应用.md
@@ -126,7 +126,9 @@ df = pd.read_csv('loan_apply.csv')
 df
 ```
 
-![](https://pic1.zhimg.com/80/v2-9ffe633a3db3c2ba382f2253b0f01360_1440w.jpg)参数解释:
+![](https://pic1.zhimg.com/80/v2-9ffe633a3db3c2ba382f2253b0f01360_1440w.jpg)
+
+参数解释:
 
 * 品格:指客户的名誉；
 * 能力:指客户的偿还能力；
@@ -152,7 +154,7 @@ sns.heatmap(data.corr(), annot=True)
 
 ### **数据标准化**
 
-PCA 建模前，数据需要进行 **标准化** ，通常使用 **中心标准化** ，也就是将变量都转化成 `Z分数`的形式，即偏离平均数的[标准差](https://www.zhihu.com/search?q=%E6%A0%87%E5%87%86%E5%B7%AE&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22article%22%2C%22sourceId%22%3A173878169%7D)个数，这样才能防止量纲问题给建模带来的影响。如身高-体重的量纲1.78-59与178-60在散点图上的显示会有比较大的区别!
+PCA 建模前，数据需要进行**标准化** ，通常使用 **中心标准化** ，也就是将变量都转化成 `Z分数`的形式，即偏离平均数的[标准差](https://www.zhihu.com/search?q=%E6%A0%87%E5%87%86%E5%B7%AE&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22article%22%2C%22sourceId%22%3A173878169%7D)个数，这样才能防止量纲问题给建模带来的影响。如身高-体重的量纲1.78-59与178-60在散点图上的显示会有比较大的区别!
 
 ```kotlin
 # PCA 通常用中心标准化，也就是都转化成 Z 分数的形式
