--- a/ClassicalMeachineLearn/数据挖掘/Notes/聚类/十种聚类方法.md
+++ b/ClassicalMeachineLearn/数据挖掘/Notes/聚类/十种聚类方法.md
@@ -3,9 +3,7 @@
 聚类或[聚类分析](https://www.zhihu.com/search?q=%E8%81%9A%E7%B1%BB%E5%88%86%E6%9E%90&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22article%22%2C%22sourceId%22%3A126661239%7D)是无监督学习问题。
 它通常被用作数据分析技术，用于发现数据中的有趣模式，例如基于其行为的客户群。
 有许多[聚类算法](https://www.zhihu.com/search?q=%E8%81%9A%E7%B1%BB%E7%AE%97%E6%B3%95&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22article%22%2C%22sourceId%22%3A126661239%7D)可供选择，对于所有情况，没有单一的最佳聚类算法。相反，最好探索一系列聚类算法以及每种算法的不同配置。
-在本教程中，你将发现如何在 python 中安装和使用顶级聚类算法。
-
-完成本教程后，你将知道：
+在本教程中，你将发现如何在 python 中安装和使用顶级聚类算法。完成本教程后，你将知道：
 
 * 聚类是在输入数据的[特征空间](https://www.zhihu.com/search?q=%E7%89%B9%E5%BE%81%E7%A9%BA%E9%97%B4&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22article%22%2C%22sourceId%22%3A126661239%7D)中查找自然组的无监督问题。
 * 对于所有数据集，有许多不同的聚类算法和单一的最佳方法。
