Update1: SVM Note

--- a/ClassicalMeachineLearn/数据挖掘/Notes/数据预处理/数据标准化.md
+++ b/ClassicalMeachineLearn/数据挖掘/Notes/数据预处理/数据标准化.md
@@ -16,8 +16,7 @@
 
 **导入数据：**
 
-
-```
+```python
 import pandas as pd
 from sklearn.preprocessing import OneHotEncoder
 
@@ -26,13 +25,12 @@ df = pd.DataFrame({'id': [3566841, 6541227, 3512441],
                    'sex': ['male', 'Female', 'Female'],
                    'level': ['high', 'low', 'middle'],
                    'score': [1, 2, 3]})
-```
 
+```
 
 ![](https://img2018.cnblogs.com/i-beta/1573126/202002/1573126-20200228085829162-654618494.png)
 
 ## 方法 1 ：使用 sklearn 库的 OneHotEncoder
-
 
 ```
 # 获得ID列（还保留二维的形式，等一会儿还要拼回去）
@@ -48,14 +46,13 @@ df1 = onehot_model.fit_transform(test_data).toarray()
 df_all = pd.concat((id_data, pd.DataFrame(df1)), axis=1)
 ```
 
-
 ![](https://img2018.cnblogs.com/i-beta/1573126/202002/1573126-20200228090612288-1211228729.png)
 
 　　完成转换~
 
 ### 注：
 
-　　1> 通过 OneHotEncoder 后，得到一个矩阵对象，
+1> 通过 OneHotEncoder 后，得到一个矩阵对象，
 
 ```
 # 得到的 df1 是一个矩阵对象 <3x8 sparse matrix of type '<class 'numpy.float64'>'
@@ -64,7 +61,7 @@ df1 = onehot_model.fit_transform(test_data)
 
 ![](https://img2018.cnblogs.com/i-beta/1573126/202002/1573126-20200228090735863-768420441.png)
 
-　　2> 矩阵进行 toarray() 后，得到 array 对象， 得到的 array 要进一步转化成 DataFrame，才能使用 pd.concat 完成拼接
+2> 矩阵进行 toarray() 后，得到 array 对象， 得到的 array 要进一步转化成 DataFrame，才能使用 pd.concat 完成拼接
 
 ![](https://img2018.cnblogs.com/i-beta/1573126/202002/1573126-20200228090834585-1452147357.png)
 
@@ -87,4 +84,4 @@ df_dum = pd.concat([id_data, test_data_dum],axis=1)
 
 ![](https://img2018.cnblogs.com/i-beta/1573126/202002/1573126-20200228091550728-502562436.png)
 
-　　保留数值型特征 score，对非数值型的 sex 和 level 进行了转换
+保留数值型特征 score，对非数值型的 sex 和 level 进行了转换
