Update: Apriori Notes

--- a/ClassicalMeachineLearn/数据挖掘/关联性规则/关联规则.md
+++ b/ClassicalMeachineLearn/数据挖掘/关联性规则/关联规则.md
@@ -4,24 +4,24 @@
 
 #### 关联规则挖掘是一种基于规则的机器学习算法，该算法可以在大数据库中发现感兴趣的关系。它的目的是利用一些度量指标来分辨数据库中存在的强规则。也即是说关联规则挖掘是用于知识发现，而非预测，所以是属于无监督的机器学习方法。
 
-```
+```python
     Apriori算法是一种挖掘关联规则的频繁项集算法，其核心思想是通过候选集生成和情节的向下封闭检测两个阶段来挖掘频繁项集。
 ```
 
 ##### 关联规则的一般步骤:
 
 ```
-          1、找到频繁集；
-          2、在频繁集中通过可信度筛选获得关联规则。
+    1、找到频繁集；
+    2、在频繁集中通过可信度筛选获得关联规则。
 ```
 
 ##### 关联规则应用：
 
 ```
-          1、Apriori算法应用广泛，可用于消费市场价格分析，猜测顾客的消费习惯，比如较有名的“尿布和啤酒”的故事；
-          2、网络安全领域中的入侵检测技术；
-          3、可用在用于高校管理中，根据挖掘规则可以有效地辅助学校管理部门有针对性的开展贫困助学工作；
-          4、也可用在移动通信领域中，指导运营商的业务运营和辅助业务提供商的决策制定。
+    1、Apriori算法应用广泛，可用于消费市场价格分析，猜测顾客的消费习惯，比如较有名的“尿布和啤酒”的故事；
+    2、网络安全领域中的入侵检测技术；
+    3、可用在用于高校管理中，根据挖掘规则可以有效地辅助学校管理部门有针对性的开展贫困助学工作；
+    4、也可用在移动通信领域中，指导运营商的业务运营和辅助业务提供商的决策制定。
 ```
 
 ##### 关联规则算法的主要应用是购物篮分析，是为了从大量的订单中发现商品潜在的关联。其中常用的一个算法叫Apriori先验算法。
@@ -85,9 +85,9 @@
 
 # Apriori算法简介
 
-##### Apriori算法：使用候选项集找[频繁项集
+##### Apriori算法：使用候选项集找[频繁项集](https://baike.baidu.com/item/%E9%A2%91%E7%B9%81%E9%A1%B9%E9%9B%86)      
 
-](https://baike.baidu.com/item/%E9%A2%91%E7%B9%81%E9%A1%B9%E9%9B%86)         Apriori[算法](https://baike.baidu.com/item/%E7%AE%97%E6%B3%95)是一种最有影响的挖掘[布尔](https://baike.baidu.com/item/%E5%B8%83%E5%B0%94)关联规则[频繁项集](https://baike.baidu.com/item/%E9%A2%91%E7%B9%81%E9%A1%B9%E9%9B%86)的算法。其核心是基于两阶段频集思想的[递推算法](https://baike.baidu.com/item/%E9%80%92%E6%8E%A8%E7%AE%97%E6%B3%95)。该关联规则在分类上属于单维、单层、布尔关联规则。在这里，所有支持度大于最小支持度的项集称为[频繁项集](https://baike.baidu.com/item/%E9%A2%91%E7%B9%81%E9%A1%B9%E9%9B%86)，简称频集。
+##### Apriori[算法](https://baike.baidu.com/item/%E7%AE%97%E6%B3%95)是一种最有影响的挖掘[布尔](https://baike.baidu.com/item/%E5%B8%83%E5%B0%94)关联规则[频繁项集](https://baike.baidu.com/item/%E9%A2%91%E7%B9%81%E9%A1%B9%E9%9B%86)的算法。其核心是基于两阶段频集思想的[递推算法](https://baike.baidu.com/item/%E9%80%92%E6%8E%A8%E7%AE%97%E6%B3%95)。该关联规则在分类上属于单维、单层、布尔关联规则。在这里，所有支持度大于最小支持度的项集称为[频繁项集](https://baike.baidu.com/item/%E9%A2%91%E7%B9%81%E9%A1%B9%E9%9B%86)，简称频集。
 
 ##### Apriori原理：如果某个项集是频繁的，那么它的所有子集也是频繁的。该定理的逆反定理为：如果某一个项集是非频繁的，那么它的所有超集（包含该集合的集合）也是非频繁的。Apriori原理的出现，可以在得知某些项集是非频繁之后，不需要计算该集合的超集，有效地避免项集数目的指数增长，从而在合理时间内计算出频繁项集。
 
@@ -212,27 +212,20 @@ if __name__=='__main__':
 
 * **1、遍历数据集，统计各元素项出现次数，创建头指针表**
 * **2、移除头指针表中不满足最小值尺度的元素项**
-* **3、第二次遍历数据集，创建FP树。对每个数据集中的项集：
-  **
+* **3、第二次遍历数据集，创建FP树。对每个数据集中的项集：**
   * **3.1 初始化空FP树**
   * **3.2 对每个项集进行过滤和重排序**
-  * **3.3 使用这个项集更新FP树，从FP树的根节点开始：
-    **
+  * **3.3 使用这个项集更新FP树，从FP树的根节点开始：**
     * **3.3.1 如果当前项集的第一个元素项存在于FP树当前节点的子节点中，则更新这个子节点的计数值**
     * **3.3.2 否则，创建新的子节点，更新头指针表**
     * **3.3.3 对当前项集的其余元素项和当前元素项的对应子节点递归3.3的过程**
 
 #### 算法详解
 
-1、**用FP树编码数据集**
+1、**用FP树编码数据集FP-growth算法将数据存储在一个称为FP树的紧凑数据结构中，它与计算机科学中的其他树的结构类似，但是它通过链接来链接相似元素，被连起来的元素可以看做一个链表，如下图：**
 
-##### **        FP-growth算法将数据存储在一个称为FP树的紧凑数据结构中，它与计算机科学中的其他树的结构类似，但是它通过链接来链接相似元素，被连起来的元素可以看做一个链表，如下图：**
-
-**![](https://img-blog.csdn.net/20180711105244245?watermark/2/text/aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3FxXzM4MzI4Mzc4/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70)
-**
-
-** 图1--FP树的结构示意图
-**
+![img](https://img-blog.csdn.net/20180711105244245?watermark/2/text/aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3FxXzM4MzI4Mzc4/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70)
+**图1--FP树的结构示意图**
 
 ##### FP树会存储项集出现的频率，每个项集都会以路径的形式存储在树中，存在相似元素的集合会共享树的一部分。只有当集合之间完全不同时树才会分叉，树节点上给出集合中单个元素及其在序列中出现的次数，路径会给出该序列的出现次数。
 
@@ -248,9 +241,9 @@ if __name__=='__main__':
 
 1.1、**构建FP树**
 
-**        构建FP树是算法的第一步，在FP树的基础之上再对频繁项集进行挖掘。为了构建FP树，要对数据集扫描两次，第一次对所有元素项出现次数进行计数，记住如果一个元素不是频繁的，那么包含这个元素的超集也不是频繁的，所以不需要考虑这些超集，第二遍的扫描只考虑那些频繁元素。**
+ **构建FP树是算法的第一步，在FP树的基础之上再对频繁项集进行挖掘。为了构建FP树，要对数据集扫描两次，第一次对所有元素项出现次数进行计数，记住如果一个元素不是频繁的，那么包含这个元素的超集也不是频繁的，所以不需要考虑这些超集，第二遍的扫描只考虑那些频繁元素。**
 
-**        除了图1给出的FP树之外，还需要一个头指针表来指向给定类型的第一个实例。利用头指针表可以快速访问FP树中一个给定类型的所有元素，发现相似元素项，如下图所示：**
+**除了图1给出的FP树之外，还需要一个头指针表来指向给定类型的第一个实例。利用头指针表可以快速访问FP树中一个给定类型的所有元素，发现相似元素项，如下图所示：**
 
 ![](https://img-blog.csdn.net/20180711105440852?watermark/2/text/aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3FxXzM4MzI4Mzc4/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70)
 
@@ -288,7 +281,7 @@ if __name__=='__main__':
 
 #### **对于每一个频繁项，都要创建一个条件FP树，将上面的条件模式基作为输入，通过相同的建树方法来构建这些条件树，然后递归地发现频繁项、发现条件模式基，以及发现另外的条件树。举个例子，假定为频繁项t创建一个条件FP树，然后对，、...重复该过程。元素项t的条件FP树的构建过程如下：**![img](https://img-blog.csdn.net/20180711105814518?watermark/2/text/aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3FxXzM4MzI4Mzc4/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70)
 
-##### s，r虽然是条件模式基的一部分，且单独看都是频繁项，但是在t的条件树中，他却是不频繁的，分别出现了2次和一次，小于阈值3，所以，不是频繁的。接下来对集合，，来挖掘对应的条件树，会产生更复杂的频率项集，该过程重复进行，直到条件树中没有元素 为止，停止。
+##### s，r虽然是条件模式基的一部分，且单独看都是频繁项，但是在t的条件树中，他却是不频繁的，分别出现了2次和一次，小于阈值3，所以，不是频繁的。接下来对集合，来挖掘对应的条件树，会产生更复杂的频率项集，该过程重复进行，直到条件树中没有元素 为止，停止。
 
 代码实现
 
