--- a/ClassicalMeachineLearn/数据挖掘/聚类/膜拜用户聚类.md
+++ b/ClassicalMeachineLearn/数据挖掘/聚类/膜拜用户聚类.md
@@ -76,19 +76,23 @@
 
 4.优化模型
 
-![](https://pic2.zhimg.com/80/v2-d7209fdce4330a6b9f7cccfe97a00469_1440w.jpg)![](https://pic3.zhimg.com/80/v2-91d3b861cbde31accbab9c84047562f2_1440w.jpg)先尝试分为3类
+![](https://pic2.zhimg.com/80/v2-d7209fdce4330a6b9f7cccfe97a00469_1440w.jpg)![](https://pic3.zhimg.com/80/v2-91d3b861cbde31accbab9c84047562f2_1440w.jpg)
+
+先尝试分为3类
 
 对‘[gender_male](https://www.zhihu.com/search?q=gender_male&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22article%22%2C%22sourceId%22%3A106561665%7D)’和'usertype_Subscriber'进行可视化（X,Y都挑0,1变量，比较好观察），理论上有4种结合可能，可视化的结果也很明显得展现了3种类别，分在4个角，说明这两个是比较好的特征变量。
 
-第0组类型是customer,性别都有；
+第0组类型是customer，性别都有；
 
-第1组类型是Subscriber,性别为男；
+第1组类型是Subscriber，性别为男；
 
 第2组类型是Subscriber，性别为女；
 
-![](https://pic4.zhimg.com/80/v2-9e576e3f79e0bdd633668c552e8a2cdb_1440w.jpg)groupby同样可以得出一样的结果
+![](https://pic4.zhimg.com/80/v2-9e576e3f79e0bdd633668c552e8a2cdb_1440w.jpg)
 
-![](https://pic1.zhimg.com/80/v2-421e3a1fa3301690e6daf3c99c3eb2dc_1440w.jpg)当聚类个数为3个时，评估模型的效果，轮廓系数为0.47**(评分越高，个体与群的距离越近，模型效果越好)**
+groupby同样可以得出一样的结果
+
+![img](https://pic1.zhimg.com/80/v2-421e3a1fa3301690e6daf3c99c3eb2dc_1440w.jpg)当聚类个数为3个时，评估模型的效果，轮廓系数为0.47(评分越高，个体与群的距离越近，模型效果越好)
 
 利用“肘”方法找出最佳聚类个数
 
@@ -96,7 +100,9 @@
 
 **步骤四：导出聚类结果，做出业务解读**
 
-![](https://pic4.zhimg.com/80/v2-ef8ecb3ffff10dc7d3e7dd34b50d4cbf_1440w.jpg)查看5中分群的各自占比，1群最多，012群都是有相当数量的群体，34群只占很小一部分。
+![](https://pic4.zhimg.com/80/v2-ef8ecb3ffff10dc7d3e7dd34b50d4cbf_1440w.jpg)
+
+查看5中分群的各自占比，1群最多，012群都是有相当数量的群体，34群只占很小一部分。
 
 ![](https://pic3.zhimg.com/80/v2-75cb1111d04457a76140abbc8c2d9ff6_1440w.jpg)可以查看一下导出的EXCEL中的内容，如上图
 
@@ -166,9 +172,7 @@ mobike_user.info()
 
 ![](https://pic2.zhimg.com/80/v2-9a75038f6770d24690fa34ae2161f0dd_1440w.jpg)**1、剔除聚类分析用不到的字段**
 
-A、unique()查询有多少个起始站，发现有许多个，而且不规律，暂时不计入影响因素，删除，以此类推[终点站](https://www.zhihu.com/search?q=%E7%BB%88%E7%82%B9%E7%AB%99&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22article%22%2C%22sourceId%22%3A121084140%7D)也删除。
-
-![](https://pic1.zhimg.com/80/v2-5bdef600b66bf00e2c1ace6871e4a290_1440w.jpg)
+A、unique()查询有多少个起始站，发现有许多个，而且不规律，暂时不计入影响因素，删除，以此类推[终点站](https://www.zhihu.com/search?q=%E7%BB%88%E7%82%B9%E7%AB%99&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22article%22%2C%22sourceId%22%3A121084140%7D)也删除。![img](https://pic1.zhimg.com/80/v2-5bdef600b66bf00e2c1ace6871e4a290_1440w.jpg)
 开始站名字不唯一，删除
 
 B、继续删除不需要的字段：
@@ -186,8 +190,6 @@ mobike_user.drop(['user_id','bikeid','from_station_id','from_station_name','to_s
 ```text
 mobike_user.isnull().sum()/len(mobike_user)
 ```
-
-![](https://pic1.zhimg.com/80/v2-29e697dd5f2e63c5d64181875a4837d4_1440w.jpg)
 
 ```text
 mobike_user.dropna(inplace=True)
