Update: Apriori Notes

--- a/ClassicalMeachineLearn/数据挖掘/关联性规则/关联规则.md
+++ b/ClassicalMeachineLearn/数据挖掘/关联性规则/关联规则.md
@@ -1,4 +1,4 @@
-# [Python机器学习算法 — 关联规则（Apriori、FP-growth）](https://www.cnblogs.com/lsqin/p/9342926.html)
+# [关联规则（Apriori、FP-growth）](https://www.cnblogs.com/lsqin/p/9342926.html)
 
 ## 关联规则 -- 简介
 
@@ -85,7 +85,7 @@
 
 # Apriori算法简介
 
-##### Apriori算法：使用候选项集找[频繁项集](https://baike.baidu.com/item/%E9%A2%91%E7%B9%81%E9%A1%B9%E9%9B%86)      
+##### Apriori算法：使用候选项集找[频繁项集](https://baike.baidu.com/item/%E9%A2%91%E7%B9%81%E9%A1%B9%E9%9B%86)
 
 ##### Apriori[算法](https://baike.baidu.com/item/%E7%AE%97%E6%B3%95)是一种最有影响的挖掘[布尔](https://baike.baidu.com/item/%E5%B8%83%E5%B0%94)关联规则[频繁项集](https://baike.baidu.com/item/%E9%A2%91%E7%B9%81%E9%A1%B9%E9%9B%86)的算法。其核心是基于两阶段频集思想的[递推算法](https://baike.baidu.com/item/%E9%80%92%E6%8E%A8%E7%AE%97%E6%B3%95)。该关联规则在分类上属于单维、单层、布尔关联规则。在这里，所有支持度大于最小支持度的项集称为[频繁项集](https://baike.baidu.com/item/%E9%A2%91%E7%B9%81%E9%A1%B9%E9%9B%86)，简称频集。
 
