Update: Introduction Notes

--- a/ClassicalMeachineLearn/机器学习/Notes/绪论.md
+++ b/ClassicalMeachineLearn/机器学习/Notes/绪论.md
@@ -2,7 +2,7 @@
 
 > 按任务是否需要和环境交互获得经验：监督学习与强化学习
 
-1, 监督学习 （Supervised Learning）
+#### 1, 监督学习 （Supervised Learning）
 
 > 按数据是否存在标签：分为传统监督学习，无监督学习，半监督学习
 
@@ -23,9 +23,10 @@
 * * 聚类分析（Clustering）
 * 半监督学习（Semi-supervised Learning）
 * 深度学习 (Deep Learning)
-  2, 强化学习（Reinforcement Learning，增强学习）
 
-### 二，Scikit-learn 模块总结
+#### 2, 强化学习（Reinforcement Learning，增强学习）
+
+## 二，Scikit-learn 模块总结
 
 |            任务            | 应用（Applications） |   算法（Algorithm）   |
 | :-------------------------: | :------------------: | :-------------------: |
